[tool.poetry]
name = "poetry-constraints-txt-multi-pin"
version = "0.1.0"
description = "Probe: poetry project with multi-pin constraints.txt (urllib3 + idna), applyConstraints=true (PRD-8924 / SCA-5467)"
authors = ["Mend QA <qa@mend.io>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"